<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    style="@style/View_match_parent"
    android:fillViewport="true"

    tools:context="com.example.android.scorekeeper.MainActivity">

    <RelativeLayout
        style="@style/View_match_parent">

        <ImageView
            style="@style/View_match_wrap_parent"
            android:layout_alignParentBottom="true"
            android:src="@drawable/sports"/>

        <LinearLayout
            android:id="@+id/sports_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_padding_1"
            android:paddingLeft="@dimen/margin_padding_2"
            android:paddingRight="@dimen/margin_padding_2"
            android:paddingTop="@dimen/margin_padding_1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:fontFamily="sans-serif"
                android:textStyle="bold|italic"
                android:padding="@dimen/margin_padding_3"
                android:text="@string/app_title"
                android:textSize="24sp" />

            <Button
                style="@style/View_match_wrap_parent"
                android:onClick="Football"
                android:text="@string/sport1" />

            <Button
                style="@style/View_match_wrap_parent"
                android:onClick="American_Football"
                android:text="@string/sport2" />

            <Button
                style="@style/View_match_wrap_parent"
                android:onClick="Basketball"
                android:text="@string/sport3" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/sports_id"
            android:layout_marginTop="@dimen/margin_padding_2"
            android:layout_weight="1">

            <LinearLayout

                style="@style/View_match_wrap_parent"
                android:layout_alignParentBottom="true"
                android:background="@android:color/darker_gray"
                android:orientation="vertical">

                <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    style="@style/AM_layout_margin1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:stretchColumns="3">

                    <TableRow>

                        <ImageView
                            style="@style/AM_table_image_config"
                            android:autoLink="phone"
                            android:onClick="AM_txt_contact"
                            android:src="@drawable/contacto" />

                        <TextView
                            android:id="@+id/text_contact"
                            style="@style/AM_text_t_wrapbold"
                            android:autoLink="phone"
                            android:onClick="AM_txt_contact"
                            android:text="@string/AM_t_contact" />

                        <TextView
                            android:id="@+id/AM_txt_contact_value"
                            style="@style/AM_text_t_wrapvalue"
                            android:layout_alignParentTop="true"
                            android:layout_toRightOf="@+id/text_contact"
                            android:onClick="AM_txt_contact"
                            android:text="@string/AM_text_t_contactvalue" />
                    </TableRow>

                    <TableRow>

                        <ImageView
                            style="@style/AM_table_image_config"
                            android:autoLink="map"
                            android:onClick="AM_txt_street"
                            android:src="@drawable/localizacao" />

                        <TextView
                            android:id="@+id/text_address"
                            style="@style/AM_text_t_wrapbold"
                            android:autoLink="map"
                            android:onClick="AM_txt_street"
                            android:text="@string/AM_t_address" />

                        <TextView
                            android:id="@+id/AM_txt_address_value"
                            style="@style/AM_text_t_wrapvalue"
                            android:autoLink="map"
                            android:onClick="AM_txt_street"
                            android:layout_toRightOf="@+id/text_address"
                            android:text="@string/AM_text_t_addressvalue" />
                    </TableRow>

                    <TableRow>

                        <ImageView
                            style="@style/AM_table_image_config"
                            android:src="@drawable/horario" />

                        <TextView
                            android:id="@+id/text_schedule"
                            style="@style/AM_text_t_wrapbold"
                            android:gravity="center"
                            android:text="@string/AM_t_work_schedule" />

                        <TextView
                            style="@style/AM_text_t_wrapvalue"
                            android:layout_toRightOf="@+id/text_schedule"
                            android:gravity="center"
                            android:text="@string/AM_text_t_workschedulevalue" />
                    </TableRow>
                </TableLayout>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>
</ScrollView>
