<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/View_match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.scorekeeper.BasketballActivity">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_basketball"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <LinearLayout
            android:id="@+id/score"
            style="@style/View_match_wrap_parent"
            android:layout_alignParentTop="true"
            android:layout_gravity="center">

            <LinearLayout
                android:id="@+id/TeamA"
                android:layout_width="@dimen/margin_padding_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_TeamA_name"
                    style="@style/txt_team_names_layout_MW_gravity_CH"
                    android:padding="@dimen/margin_padding_2"
                    android:text="@string/team_a_name" />

                <TextView
                    android:id="@+id/team_a_score"
                    style="@style/txt_score_teamss_layout_MW_gravity_CH"
                    android:paddingBottom="@dimen/margin_padding_3"
                    android:text="0" />

                <Button
                    android:id="@+id/bt_3pointsA"
                    style="@style/button_match_wrap_mlefright_Size"
                    android:onClick="bt_3pointsA"
                    android:text="@string/_3_points_name" />

                <Button
                    android:id="@+id/bt_2pointsA"
                    style="@style/button_match_wrap_mlefright_Size"
                    android:layout_marginTop="@dimen/margin_padding_1"
                    android:onClick="bt_2pointsA"
                    android:text="@string/_2_points_name" />

                <Button
                    android:id="@+id/bt_1pointA"
                    style="@style/button_match_wrap_mlefright_Size"
                    android:layout_marginTop="@dimen/margin_padding_1"
                    android:onClick="bt_1pointA"
                    android:text="@string/free_throw_name" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="@dimen/margin_padding_2"
                    android:background="@android:color/darker_gray" />

                <TextView
                    style="@style/txt_team_names_layout_MW_gravity_CH"
                    android:padding="@dimen/margin_padding_2"
                    android:text="@string/settings_name" />

                <EditText
                    android:id="@+id/ed_teamA_name"
                    style="@style/edit_text_config"
                    android:hint="@string/team_a_s_name_hint"
                    android:maxLength="15"/>

                <Button
                    android:id="@+id/bt_setteamA_name"
                    style="@style/button_set"
                    android:textSize="14sp"
                    android:onClick="bt_setteamA_name"
                    android:text="@string/set_button_name" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_padding_2"
                android:background="@android:color/darker_gray" />


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/TeamB"
                android:layout_width="@dimen/margin_padding_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"

                tools:context="com.example.android.courtcounter.MainActivity">

                <TextView
                    android:id="@+id/txt_TeamB_name"
                    style="@style/txt_team_names_layout_MW_gravity_CH"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/margin_padding_2"
                    android:text="@string/team_b_name" />

                <TextView
                    android:id="@+id/team_b_score"
                    style="@style/txt_score_teamss_layout_MW_gravity_CH"
                    android:paddingBottom="@dimen/margin_padding_3"
                    android:text="0" />

                <Button
                    android:id="@+id/bt_3pointsB"
                    style="@style/button_match_wrap_mlefright_Size"
                    android:onClick="bt_3pointsB"
                    android:text="@string/_3_points_name" />

                <Button
                    android:id="@+id/bt_2pointsB"
                    style="@style/button_match_wrap_mlefright_Size"
                    android:layout_marginTop="@dimen/margin_padding_1"
                    android:onClick="bt_2pointsB"
                    android:text="@string/_2_points_name" />

                <Button
                    android:id="@+id/bt_1pointB"
                    style="@style/button_match_wrap_mlefright_Size"
                    android:layout_marginTop="@dimen/margin_padding_1"
                    android:onClick="bt_1pointB"
                    android:text="@string/free_throw_name" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="@dimen/margin_padding_2"
                    android:background="@android:color/darker_gray" />

                <TextView
                    style="@style/txt_team_names_layout_MW_gravity_CH"
                    android:padding="@dimen/margin_padding_2"
                    android:text="@string/settings_name" />

                <EditText
                    android:id="@+id/ed_teamB_name"
                    style="@style/edit_text_config"
                    android:hint="@string/team_b_s_name_hint"
                    android:maxLength="15"/>

                <Button
                    android:id="@+id/bt_setteamB_name"
                    style="@style/button_set"
                    android:textSize="14sp"
                    android:onClick="bt_setteamB_name"
                    android:text="@string/set_button_name" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/basketball_ball"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/basketball"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/score">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:orientation="horizontal">


                <Button
                    style="@style/menu_buttons"
                    android:onClick="back_main"
                    android:text="@string/back_button_name" />

                <Button
                    style="@style/menu_buttons"
                    android:onClick="reset_result"
                    android:text="@string/reset_button_name" />

                <Button
                    style="@style/menu_buttons"
                    android:onClick="send_result"
                    android:text="@string/send_result_button_name" />

            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>
